--- a/styles/style.css
+++ b/styles/style.css
@@ -1,23 +1,123 @@
-.header {
-    display: grid;
-    /* grid-template-columns: 
-    grid-template-rows: */
-    font-size: 18;
-
+.body {
+    font-weight: 400;    
 }
 
-.header_menu-list {
+.header {
+    display: grid;
+    grid-template-columns: 1fr 135px 1fr;    
+    background-color: grey;
+    min-height: 293px;
+    align-items: center;
+}
+
+.header_menu {
+    padding-left: 51px;
+}
+
+.header_links-list {
     list-style: circle outside;
     display: flex;
     flex-flow: row nowrap;
-    gap: 26px;    
+    align-items: end;
+    gap: 31px;    
 }
 
+.header-link {
+    font-size: 18px;    
+    text-underline-offset: 3px;
+    line-height: 22px;
+    letter-spacing: 0.01em;
+}
 
-/* не работает
-.menu-item_active .header_menu-link {
+.header_links-list .header_links-list-item_active {
+    list-style-type: none;
+}
+
+.header_links-list-item .header-link_active {
     text-decoration: none;
-}*/
+}
+
+li::marker {
+    font-size: 1.3em;
+}
+
+.header-logo {
+    display: block;
+    
+    border: #000 6px;
+    
+    
+
+}
+
+.address {
+    padding-left: 193.86px;
+    padding-right: 52px;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 1.35;
+}
+
+.phone {
+    text-underline-offset: 4px;
+}
+
+.email {
+    text-underline-offset: 4px;
+}
+
+.cover {
+    min-height: 757px;    
+    background-image: url(/images/cover.jpg);
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+    position: relative;
+    text-transform: uppercase;
+}
+
+.overlay {    
+    width: 100%;
+    height: 100%;
+     background-color: rgb(0 0 0 / 0.6);
+     position: absolute;
+     inset: 0;
+     z-index: 0;
+}
+
+.cover_title,
+.cover_description {
+    position: relative;
+    z-index: 1;
+}
+
+.cover_title  {
+    font-size: 100px;
+    font-weight: 700;
+    letter-spacing: .3em;
+    padding: 162px 50px 135px;
+    line-height: 1.2;
+}
+
+.aligned-text {
+    display: block;
+}
+
+.aligned-text-center {    
+    text-align: center;
+}
+
+.aligned-text-right {
+    text-align: end;
+}
+
+.letter-spacing-extended {
+    letter-spacing: .6em;
+}
+
+.no-letter-spacing {
+    letter-spacing: 0;
+}
 
 
 
