--- a/styles/style.css
+++ b/styles/style.css
@@ -14,7 +14,7 @@
   padding-left: 51px;
 }
 
-.header__links-list .header__links-list-item_no-bullit {
+.header__links-list:first-child {
   list-style-type: none;
 }
 
@@ -210,7 +210,7 @@ li::marker {
 .lots__look-more-link {
   font-size: 20px;
   margin: 30px 0 146px 40px;
-  display: block;
+  display: inline-block;
   text-underline-offset: 5px;
   max-width: fit-content;
 }
@@ -284,7 +284,7 @@ li::marker {
 .footer__social-list {
   list-style-type: none;
   display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: end;
   gap: 48px;
 }
